src/test/errors/loopVariantError.hhl
/*
    A simple test case for errors caused by a loops variant which may not strictly decrease.
    Output:
*/

method test() returns (sum: Int)
requires exists <_s> :: true
ensures exists <_s> :: true
{
    var i: Int
    i := 0

    while (i < 10)
		invariant exists <_s> :: true
		decreases i
    {
        i := 0
    }
}
